--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           title: "The Trans Luxury Hotel Bandung",
           city: "Kota Bandung, Jawa Barat",
           promo: "Harga Spesial DETIK!",
-          price: "Rp140.000",
+          price: "Rp1.500.000",
           url: "https://reservations.travelclick.com/107718?RatePlanId=10190603",
         },
         {
@@ -231,15 +231,15 @@
           title: "The Trans Resort Bali",
           city: "Seminyak, Bali",
           promo: "Harga Spesial DETIK!",
-          price: "Rp150.000",
+          price: "Rp2.000.000",
           url: "https://reservations.travelclick.com/110376?RatePlanId=10190570",
         },
         {
           logo: "https://fourstarbytranshotel.com/cms/storage/app/uploads/public/679/c3f/ea8/679c3fea86359380748333.jpg",
           title: "Four Star by Trans Hotel Bali",
           city: "Denpasar, Bali",
-          promo: "Harga Spesial DETIK",
-          price: "Rp100.000",
+          promo: "Harga Spesial DETIK!",
+          price: "Rp700.000",
           url: "https://reservations.travelclick.com/114787?RatePlanId=10194030",
         },
       ];
@@ -269,7 +269,7 @@
       const shortText =
         "Trans Hotel Group (THG) adalah perusahaan perhotelan Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan.";
       const fullText =
-        "Trans Hotel Group (THG), sebuah karya dari Trans Corporation, adalah salah satu perusahaan perhotelan yang berkembang pesat di Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan. Koleksi THG meliputi The Trans Luxury Hotel, Bandung; The Trans Luxury Yacht; The Trans Resort Bali; Four Star by Trans Hotel Bali; Aston Tanjungpinang; ibis Bandung Trans Studio; dan Fashion Hotel Legian, Bali.";
+        "Trans Hotel Group (THG), sebuah karya dari Trans Corporation, adalah salah satu perusahaan perhotelan yang berkembang pesat di Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan. Koleksi THG meliputi The Trans Luxury Hotel, Bandung; The Trans Luxury Yacht; The Trans Resort Bali; Four Star by Trans Hotel Bali; Aston Tanjungpinang; Ibis Bandung Trans Studio; dan Fashion Hotel Legian, Bali.";
       let expanded = false;
       descEl.textContent = shortText;
       function toggleDesc() {
