--- a/index.html
+++ b/index.html
@@ -1,255 +1,265 @@
 <!DOCTYPE html>
 <html lang="id">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Trans Hotel Group</title>
-    <link rel="icon" href="img/thglogo.png" type="image/png" />
 
-    <!-- Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Trans Hotel Group</title>
+  <link rel="icon" href="img/thglogo.png" type="image/png" />
 
-    <style>
-      :root {
-        --snow: #fdfbfc;
-        --rosewood: #590003;
-        --rosewood-2: #610607;
-        --pale-dogwood: #d3c2c2;
-        --merah-muda-1: #fff5f5;
-        --merah-muda-2: #ffe0e0;
-        --merah: #cc4a4a;
-        --card-radius: 20px;
-        --shadow: 10px 10px 10px rgba(0, 0, 0, 0.08);
-      }
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: "Montserrat", sans-serif;
-        color: var(--rosewood);
-      }
-      body {
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        padding: 32px 12px;
-        background: linear-gradient(
-          to bottom,
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <style>
+    :root {
+      --snow: #fdfbfc;
+      --rosewood: #590003;
+      --rosewood-2: #610607;
+      --pale-dogwood: #d3c2c2;
+      --merah-muda-1: #fff5f5;
+      --merah-muda-2: #ffe0e0;
+      --merah: #cc4a4a;
+      --card-radius: 20px;
+      --shadow: 10px 10px 10px rgba(0, 0, 0, 0.08);
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: "Montserrat", sans-serif;
+      color: var(--rosewood);
+    }
+
+    body {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      padding: 32px 12px;
+      background: linear-gradient(to bottom,
           #fff 0%,
           var(--merah-muda-1) 25%,
           var(--merah-muda-2) 50%,
           var(--merah) 75%,
-          var(--rosewood) 100%
-        );
-      }
+          var(--rosewood) 100%);
+    }
 
-      /* logo kanan‑atas */
-      .brand-link {
-        position: fixed;
-        top: 16px;
-        right: 16px;
-        z-index: 1000;
-      }
-      .brand {
+    /* logo kanan‑atas */
+    .brand-link {
+      position: fixed;
+      top: 16px;
+      right: 16px;
+      z-index: 1000;
+    }
+
+    .brand {
+      width: 90px;
+    }
+
+    .app {
+      width: 420px;
+      max-width: 100%;
+      background: #fff;
+      border-radius: 24px;
+      box-shadow: var(--shadow);
+      overflow: hidden;
+      position: relative;
+      padding-bottom: 24px;
+    }
+
+    .header {
+      height: 82px;
+      background: var(--rosewood);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      font-weight: 600;
+      color: #fff;
+      position: relative;
+    }
+
+    .back {
+      position: absolute;
+      left: 22px;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 28px;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin: 30px 28px 18px;
+      font-weight: 700;
+      color: var(--rosewood-2);
+    }
+
+    /* kartu hotel clickable */
+    .card-link {
+      display: block;
+      text-decoration: none;
+    }
+
+    .card {
+      background: var(--snow);
+      border-radius: var(--card-radius);
+      box-shadow: var(--shadow);
+      padding: 18px;
+      display: flex;
+      gap: 18px;
+      margin: 0 24px 24px;
+      align-items: stretch;
+      transition: transform 0.15s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-3px);
+    }
+
+    .card img.logo {
+      width: 120px;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 12px;
+      flex-shrink: 0;
+    }
+
+    .card h3 {
+      font-size: 14px;
+      margin-bottom: 4px;
+      font-weight: 700;
+    }
+
+    .info {
+      font-size: 12px;
+      color: var(--pale-dogwood);
+      margin-bottom: 4px;
+    }
+
+    .promo {
+      font-size: 9px;
+      color: var(--rosewood);
+      margin-bottom: 6px;
+    }
+
+    .price {
+      font-size: 14px;
+      font-weight: 600;
+      color: var(--rosewood);
+    }
+
+    .price span.label {
+      font-size: 9px;
+      font-weight: 500;
+      display: block;
+    }
+
+    /* deskripsi */
+    .about {
+      margin: 0 24px;
+      padding: 16px;
+    }
+
+    .about h3 {
+      font-size: 15px;
+      margin-bottom: 10px;
+      font-weight: 700;
+    }
+
+    .about p {
+      font-size: 12px;
+      line-height: 1.6;
+      color: #444;
+    }
+
+    .readmore {
+      text-align: right;
+      font-size: 10px;
+      color: #c2185b;
+      margin-top: 8px;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    @media (max-width: 480px) {
+      .card img.logo {
         width: 90px;
       }
 
-      .app {
-        width: 420px;
-        max-width: 100%;
-        background: #fff;
-        border-radius: 24px;
-        box-shadow: var(--shadow);
-        overflow: hidden;
-        position: relative;
-        padding-bottom: 24px;
-      }
-      .header {
-        height: 82px;
-        background: var(--rosewood);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 18px;
-        font-weight: 600;
-        color: #fff;
-        position: relative;
-      }
-      .back {
-        position: absolute;
-        left: 22px;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 28px;
-        color: #fff;
-        cursor: pointer;
-      }
-
-      h2 {
-        font-size: 18px;
-        margin: 30px 28px 18px;
-        font-weight: 700;
-        color: var(--rosewood-2);
-      }
-
-      /* kartu hotel clickable */
-      .card-link {
-        display: block;
-        text-decoration: none;
-      }
       .card {
-        background: var(--snow);
-        border-radius: var(--card-radius);
-        box-shadow: var(--shadow);
-        padding: 18px;
-        display: flex;
-        gap: 18px;
-        margin: 0 24px 24px;
-        align-items: stretch;
-        transition: transform 0.15s ease;
-      }
-      .card:hover {
-        transform: translateY(-3px);
-      }
-      .card img.logo {
-        width: 120px;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 12px;
-        flex-shrink: 0;
-      }
-      .card h3 {
-        font-size: 14px;
-        margin-bottom: 4px;
-        font-weight: 700;
-      }
-      .info {
-        font-size: 12px;
-        color: var(--pale-dogwood);
-        margin-bottom: 4px;
-      }
-      .promo {
-        font-size: 9px;
-        color: var(--rosewood);
-        margin-bottom: 6px;
-      }
-      .price {
-        font-size: 14px;
-        font-weight: 600;
-        color: var(--rosewood);
-      }
-      .price span.label {
-        font-size: 9px;
-        font-weight: 500;
-        display: block;
-      }
-
-      /* deskripsi */
-      .about {
-        margin: 0 24px;
+        gap: 12px;
         padding: 16px;
-      }
-      .about h3 {
-        font-size: 15px;
-        margin-bottom: 10px;
-        font-weight: 700;
-      }
-      .about p {
-        font-size: 12px;
-        line-height: 1.6;
-        color: #444;
-      }
-      .readmore {
-        text-align: right;
-        font-size: 10px;
-        color: #c2185b;
-        margin-top: 8px;
-        cursor: pointer;
-        font-weight: 500;
+        margin: 0 16px 20px;
       }
 
-      @media (max-width: 480px) {
-        .card img.logo {
-          width: 90px;
-        }
-        .card {
-          gap: 12px;
-          padding: 16px;
-          margin: 0 16px 20px;
-        }
-        .about {
-          margin: 0 16px;
-        }
+      .about {
+        margin: 0 16px;
       }
-    </style>
-  </head>
-  <body>
-    <!-- logo site -->
-    <a
-      href="https://www.transhotelgroup.com"
-      target="_blank"
-      rel="noopener"
-      class="brand-link"
-    >
-      <img src="img/thglogo.png" alt="Trans Hotel Group" class="brand" />
-    </a>
+    }
+  </style>
+</head>
 
-    <div class="app">
-      <div class="header">
-        <span class="back" onclick="history.back()">&#x2190;</span>
-        TRANS HOTEL GROUP
-      </div>
+<body>
+  <!-- logo site -->
+  <a href="https://www.transhotelgroup.com" target="_blank" rel="noopener" class="brand-link">
+    <img src="img/thglogo.png" alt="Trans Hotel Group" class="brand" />
+  </a>
 
-      <h2>Pilih Lokasi Trans Hotelmu!</h2>
-
-      <div id="list"></div>
-
-      <!-- deskripsi THG -->
-      <div class="about">
-        <h3>Tentang Trans Hotel Group</h3>
-        <p id="desc"></p>
-        <div class="readmore" onclick="toggleDesc()">Selengkapnya ↓</div>
-      </div>
+  <div class="app">
+    <div class="header">
+      <span class="back" onclick="history.back()">&#x2190;</span>
+      TRANS HOTEL GROUP
     </div>
 
-    <script>
-      /* data hotel + link */
-      const locations = [
-        {
-          logo: "https://www.thetranshotel.com/images/gallery/images/1-GEDUNG.jpg",
-          title: "The Trans Luxury Hotel Bandung",
-          city: "Kota Bandung, Jawa Barat",
-          promo: "Harga Spesial DETIK!",
-          price: "Rp1.500.000",
-          url: "https://reservations.travelclick.com/107718?RatePlanId=10190603",
-        },
-        {
-          logo: "https://transresortbali.com/cms/storage/app/uploads/public/674/e80/19e/674e8019e8ca2227075225.jpg?_gl=1*5gh48e*_gcl_au*MTE1Mjk1OTY5LjE3NTAxMzI1OTc.",
-          title: "The Trans Resort Bali",
-          city: "Seminyak, Bali",
-          promo: "Harga Spesial DETIK!",
-          price: "Rp2.000.000",
-          url: "https://reservations.travelclick.com/110376?RatePlanId=10190570",
-        },
-        {
-          logo: "https://fourstarbytranshotel.com/cms/storage/app/uploads/public/679/c3f/ea8/679c3fea86359380748333.jpg",
-          title: "Four Star by Trans Hotel Bali",
-          city: "Denpasar, Bali",
-          promo: "Harga Spesial DETIK!",
-          price: "Rp700.000",
-          url: "https://reservations.travelclick.com/114787?RatePlanId=10194030",
-        },
-      ];
+    <h2>Pilih Lokasi Trans Hotelmu!</h2>
 
-      /* render kartu */
-      const list = document.getElementById("list");
-      locations.forEach((loc) => {
-        list.insertAdjacentHTML(
-          "beforeend",
-          `<a href="${loc.url}" target="_blank" rel="noopener" class="card-link">
+    <div id="list"></div>
+
+    <!-- deskripsi THG -->
+    <div class="about">
+      <h3>Tentang Trans Hotel Group</h3>
+      <p id="desc"></p>
+      <div class="readmore" onclick="toggleDesc()">Selengkapnya ↓</div>
+    </div>
+  </div>
+
+  <script>
+    /* data hotel + link */
+    const locations = [
+      {
+        logo: "https://www.thetranshotel.com/images/gallery/images/1-GEDUNG.jpg",
+        title: "The Trans Luxury Hotel Bandung",
+        city: "Kota Bandung, Jawa Barat",
+        promo: "Harga Spesial detikcom!",
+        price: "Rp1.500.000",
+        url: "https://reservations.travelclick.com/107718?RatePlanId=10190603",
+      },
+      {
+        logo: "https://transresortbali.com/cms/storage/app/uploads/public/674/e80/19e/674e8019e8ca2227075225.jpg?_gl=1*5gh48e*_gcl_au*MTE1Mjk1OTY5LjE3NTAxMzI1OTc.",
+        title: "The Trans Resort Bali",
+        city: "Seminyak, Bali",
+        promo: "Harga Spesial detikcom!",
+        price: "Rp2.000.000",
+        url: "https://reservations.transresortbali.com/book/dates-of-stay?identifier=DETIK",
+      },
+      {
+        logo: "img/fourstar.jpg",
+        title: "Four Star by Trans Hotel Bali",
+        city: "Denpasar, Bali",
+        promo: "Harga Spesial detikcom!",
+        price: "Rp700.000",
+        url: "https://reservations.travelclick.com/114787?RatePlanId=10194030",
+      },
+    ];
+
+    /* render kartu */
+    const list = document.getElementById("list");
+    locations.forEach((loc) => {
+      list.insertAdjacentHTML(
+        "beforeend",
+        `<a href="${loc.url}" target="_blank" rel="noopener" class="card-link">
           <div class="card">
             <img class="logo" src="${loc.logo}" alt="${loc.title}">
             <div>
@@ -260,23 +270,24 @@
             </div>
           </div>
         </a>`
-        );
-      });
+      );
+    });
 
-      /* deskripsi toggle */
-      const descEl = document.getElementById("desc");
-      const btn = document.querySelector(".readmore");
-      const shortText =
-        "Trans Hotel Group (THG) adalah perusahaan perhotelan Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan.";
-      const fullText =
-        "Trans Hotel Group (THG), sebuah karya dari Trans Corporation, adalah salah satu perusahaan perhotelan yang berkembang pesat di Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan. Koleksi THG meliputi The Trans Luxury Hotel, Bandung; The Trans Luxury Yacht; The Trans Resort Bali; Four Star by Trans Hotel Bali; Aston Tanjungpinang; Ibis Bandung Trans Studio; dan Fashion Hotel Legian, Bali.";
-      let expanded = false;
-      descEl.textContent = shortText;
-      function toggleDesc() {
-        expanded = !expanded;
-        descEl.textContent = expanded ? fullText : shortText;
-        btn.textContent = expanded ? "Lebih sedikit ↑" : "Selengkapnya ↓";
-      }
-    </script>
-  </body>
+    /* deskripsi toggle */
+    const descEl = document.getElementById("desc");
+    const btn = document.querySelector(".readmore");
+    const shortText =
+      "Trans Hotel Group (THG) adalah perusahaan perhotelan Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan.";
+    const fullText =
+      "Trans Hotel Group (THG), sebuah karya dari Trans Corporation, adalah salah satu perusahaan perhotelan yang berkembang pesat di Indonesia yang memiliki, mengelola, dan melakukan waralaba hotel, resor, serta properti liburan. Koleksi THG meliputi The Trans Luxury Hotel, Bandung; The Trans Luxury Yacht; The Trans Resort Bali; Four Star by Trans Hotel Bali; Aston Tanjungpinang; Ibis Bandung Trans Studio; dan Fashion Hotel Legian, Bali.";
+    let expanded = false;
+    descEl.textContent = shortText;
+    function toggleDesc() {
+      expanded = !expanded;
+      descEl.textContent = expanded ? fullText : shortText;
+      btn.textContent = expanded ? "Lebih sedikit ↑" : "Selengkapnya ↓";
+    }
+  </script>
+</body>
+
 </html>
